# pybind11-cross-test

./: .gitignore  .gitmodules  CMakeLists.txt  build-pybind11.mac.sh  build-pybind11.ps1  build-pybind11.sh  build-python.sh  toolchain-mac.cmake  toolchain-win.cmake  toolchain.cmake
.github/workflows/: cross.yml
